--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 data/development.csv
 data/evaluation.csv
 data/sample_submission.csv
+data/development_sampled.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
