--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@ data/development.csv
 data/evaluation.csv
 data/sample_submission.csv
 data/development_sampled.csv
+data/development_sampled_processed.csv
+data/evaluation_processed.csv
 scripts/jupyter_tests/development.csv
 scripts/jupyter_tests/development_sampled.csv
+scripts/jupyter_tests/development_triangle.csv
+scripts/jupyter_tests/development_processed.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
